--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -38,7 +38,7 @@
 	        <!-- Navbar Right Side -->
 	        <div class="navbar-nav">
 	          <a class="nav-item nav-link" href="#">Login</a>
-	          <a class="nav-item nav-link" href="#">Register</a>
+	          <a class="nav-item nav-link" href="/register/">Register</a>
 	        </div>
 	      </div>
 	    </div>
@@ -48,7 +48,16 @@
 	<main role="main" class="container">
 	  <div class="row">
 	    <div class="col-md-8">
-	      {% block bodycontent %}{% endblock %}
+	    	{% if messages %}
+	    		{% for message in messages %}
+	    			<div class="alert alert-{{ message.tags }}">
+	    				{{ message }}
+	    			</div>
+	    		{% endfor %}
+	    	{% endif %}
+
+	      	{% block bodycontent %}{% endblock %}
+	    	
 	    </div>
 	    <div class="col-md-4">
 	      <div class="content-section">
