Python Django Tutorial - P8

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -3,6 +3,21 @@
 
 {% block bodycontent %}
 
-	<h1>{{ user.username }}</h1>
+	<div class="content-section">
+	  <div class="media">
+	    <img class="rounded-circle account-img" src='{{ user.profile.image.url }}'>
+	    <div class="media-body">
+	      <h2 class="account-heading">{{ user.username }}</h2>
+	      <p class="text-secondary"> 
+	      	{% if user.email %}
+	      		{{ user.email }}
+	      	{% else %}
+	      		No email address
+	      	{% endif %}
+	      </p>
+	    </div>
+	  </div>
+	  <!-- FORM HERE -->
+	</div>
 
 {% endblock bodycontent %}
