--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -4,20 +4,30 @@
 {% block bodycontent %}
 
 	<div class="content-section">
-	  <div class="media">
-	    <img class="rounded-circle account-img" src='{{ user.profile.image.url }}'>
-	    <div class="media-body">
-	      <h2 class="account-heading">{{ user.username }}</h2>
-	      <p class="text-secondary"> 
-	      	{% if user.email %}
-	      		{{ user.email }}
-	      	{% else %}
-	      		No email address
-	      	{% endif %}
-	      </p>
-	    </div>
-	  </div>
-	  <!-- FORM HERE -->
+		<div class="media">
+	    	<img class="rounded-circle account-img" src='{{ user.profile.image.url }}'>
+	    	<div class="media-body">
+	     		<h2 class="account-heading">{{ user.username }}</h2>
+	     		<p class="text-secondary"> 
+		      	{% if user.email %}
+		      		{{ user.email }}
+		      	{% else %}
+		      		No email address
+		      	{% endif %}
+	      		</p>
+	    	</div>
+	  	</div>
+	  	<form method="POST" enctype="multipart/form-data">
+			{% csrf_token %}
+			<fieldset class="form-group">
+				<legend class="border-bottom mb-4">Profile Info</legend>
+				{{ u_form|crispy }}
+				{{ p_form|crispy }}
+			</fieldset>
+			<div class="form-group">
+				<button class="btn btn-outline-info" type="submit">Save Updates</button>
+			</div>
+		</form>
 	</div>
 
 {% endblock bodycontent %}
