--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,3 +1,5 @@
+{% extends "polls/base.html" %}
+{% block body_content %}
 <form action="{% url 'polls:vote' question.id %}" method="post">
 {% csrf_token %}
 <fieldset>
@@ -10,3 +12,4 @@
 </fieldset>
 <input type="submit" value="Vote">
 </form>
+{% endblock body_content%}
